WebError Changelog
==================

0.8 (**tip**)